objects/DM_Accrual_Entry__c.object
<CustomObject>
    <fields>
        <fullName>DM_Accounting_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Accounting Entry</label>
        <referenceTo>clcommon__Accounting_Entry__c</referenceTo>
        <relationshipLabel>DM Accrual Entries</relationshipLabel>
        <relationshipName>DM_Accrual_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Amount__c</fullName>
        <label>DM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM CL Contract</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>DM Accrual Entries</relationshipLabel>
        <relationshipName>DM_Accrual_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_3__c</fullName>
        <label>DM Custom Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_GL_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM GL Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Internal_Accounting_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Internal Accounting Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Date__c</fullName>
        <label>DM Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Accounting_Reversal_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Accounting Reversal Generated</label>
        <type>Checkbox</type>
    </fields>
    <label>DM Accrual Entry</label>
    <nameField>
        <label>DM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Accrual Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>